--- a/src/templates/lecturerStudent/lecturerStudent_publicationStatus.html
+++ b/src/templates/lecturerStudent/lecturerStudent_publicationStatus.html
@@ -45,8 +45,7 @@
 
 <body>
     <header>
-        <a href="{{ url_for('lecturer_student_home') }}" class="icon"
-            style="text-decoration:none; color:inherit;">&#8962;</a>
+        <span class="icon" onclick="toggleMenu()">&#9776;</span>
         <span class="header-title">Publication Status</span>
         <form action="{{ url_for('lecturer_student_status') }}" method="GET" style="display:flex; align-items:center;">
             <div class="search-container" style="width: 500px;">
